--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,4 +1,5 @@
-Django==2.0
-psycopg2==2.7.3.2
-djangorestframework==3.7.7
+Django==1.8
+djangorestframework==3.8.2
+Markdown==2.6.11
 django-filter==1.1.0
+psycopg2==2.7.4
